--- a/TigerCheckAndroid/app/src/main/res/values/strings.xml
+++ b/TigerCheckAndroid/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Messages -->
-    <string name="app_name">TigerCheck</string>
+    <string name="app_name">TigerCheckv2</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="welcome_message">Welcome to TigerCheck</string>
