--- a/TigerCheckAndroid/app/src/main/res/values/strings.xml
+++ b/TigerCheckAndroid/app/src/main/res/values/strings.xml
@@ -2,28 +2,41 @@
 <resources>
 
     <!-- Messages -->
-    <string name="app_name">TigerCheckv2</string>
+    <string name="app_name">TigerCheck</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="welcome_message">Welcome to TigerCheck</string>
     <string name="station_select_message">Please select the stations for this device</string>
     <string name="barcode_edit_text">Enter Barcode Number</string>
-    
-    
+
     <!-- Buttons -->
     <string name="submit_button">Submit</string>
     <string name="continue_button">Continue</string>
     <string name="change_stations_button">Change Selected Stations</string>
-    
-    
+
     <!-- StationSelect checkbox options -->
     <string name="checkbox_blood_pressure">Blood Pressure</string>
     <string name="checkbox_heart_rate">Heart Rate</string>
     <string name="checkbox_eye_exam">Eye Examination</string>
-    
-    
+
     <!-- Titles -->
     <string name="title_activity_station_select">StationSelect</string>
     <string name="title_activity_main_station">MainStation</string>
+    <string name="title_activity_blood_pressure">BloodPressure</string>
+    <string name="title_activity_respiration_rate">RespirationRate</string>
+    <string name="title_activity_height_weight">HeightWeight</string>
+    <string name="title_activity_blood_sugar">BloodSugar</string>
+    <string name="title_activity_temperature">Temperature</string>
+    <string name="title_activity_cholesterol">Cholesterol</string>
+    <string name="title_activity_heart_rate">HeartRate</string>
+    <string name="title_activity_scoliosis">Scoliosis</string>
+    <string name="title_activity_lungs">Lungs</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_dental">Dental</string>
+    <string name="title_activity_ears">Ears</string>
+    <string name="title_activity_heart">Heart</string>
+    <string name="title_activity_vision">Vision</string>
+    <string name="title_activity_throat">Throat</string>
+    <string name="title_activity_nose">Nose</string>
 
 </resources>
